--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mern-startekit",
-  "version": "1.0.0",
+  "name": "mern-simplesetup",
+  "version": "2.0.0",
   "description": "A quick check for your MERN stack installation",
   "author": "Darbaz Ali",
   "license": "MIT",
@@ -11,11 +11,6 @@
     "mongodb",
     "mern"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DarbazAli/mern-startrekit.git"
-  },
-  "homepage": "https://github.com/DarbazAli/mern-startrekit.git",
   "main": "template.js",
   "scripts": {
     "dev": "nodemon",
@@ -23,17 +18,18 @@
     "start": "NODE_ENV=production node ./dist/server.generated.js"
   },
   "engines": {
-    "node": "13.12.0",
-    "npm": "6.14.4"
+    "node": "14.13.0",
+    "npm": "6.14.11"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "16.13.0",
-    "dotenv": "^8.2.0",
+    "@hot-loader/react-dom": "17.0.1",
+    "audit": "0.0.6",
     "express": "4.17.1",
+    "fix": "0.0.6",
     "mongodb": "3.5.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hot-loader": "4.12.20"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
